# MicroMegas-Simulation

./: Avalanche.hh  Makefile  README.md  avalanche.cc  combinedSimulation.py  simulation.cpp
LUT/: README.md
LUT/avalanche/: Makefile  avalanche.cpp
LUT/drift/: Makefile  drift.cpp
analysis/: Makefile  analysis.cpp  analysis.hpp
analysis/event_display/: Makefile  event_display.cpp  event_display.hpp
analysis/opengl_event/: pyglet_viewer.py
analysis/pyTrackReco/: pyTrackReco.py
analysis/track_reconstruction/: Makefile  track_reco  track_reco.cpp  track_reco.hpp
avalanche/: README.md
elementaryCell/: elementaryCell.geo  elementaryCell.sif  elementaryCell_weight.sif
geometry/: ELMERSOLVER_STARTINFO  calculate_field.sif  calculate_field_weight.sif  create_mesh.py  detector.fcstd  elec.sif  elec_weight.sif  elementaryCell.sif  elementaryCell_weight.sif  gmsh.py  mesh.geo
geometry/detector/: elec.sif  geometry.msh
outfiles/: README.md  job_avalanche.sh  job_drift.sh  job_join.sh  job_photoconversion.sh  job_split.sh
photoconversion/: Makefile  README.md  make.sh
simulation/: MMconfig.py  README.md  build.sh  make.sh  run.sh  simulation.conf
simulation/photoconversion/: CMakeLists.txt  Makefile  init_vis.mac  make.sh  photoconversion.cpp  plot.C  run.mac  run1.mac  run2.mac  setup_detector.mac  vis.mac
simulation/photoconversion/include/: ActionInitialization.hpp  DetectorConstruction.hpp  DetectorMessenger.hpp  EventAction.hpp  HistManager.hpp  MMActionInitialization.hpp  MMDetectorConstruction.hpp  MMEventAction.hpp  MMPrimaryGeneratorAction.hpp  MMRun.hpp  MMRunAction.hpp  MMSteppingAction.hpp  OutputManager.hpp  PhysicsList.hpp  PhysicsListMessenger.hpp  PrimaryGeneratorAction.hpp  Run.hpp  RunAction.hpp  StepMax.hpp  StepMaxMessenger.hpp  SteppingAction.hpp
simulation/photoconversion/src/: ActionInitialization.cpp  DetectorConstruction.cpp  DetectorMessenger.cpp  EventAction.cpp  HistManager.cpp  MMActionInitialization.cpp  MMDetectorConstruction.cpp  MMEventAction.cpp  MMPrimaryGeneratorAction.cpp  MMRun.cpp  MMRunAction.cpp  MMSteppingAction.cpp  OutputManager.cpp  PhysicsList.cpp  PhysicsListMessenger.cpp  PrimaryGeneratorAction.cpp  Run.cpp  RunAction.cpp  StepMax.cpp  StepMaxMessenger.cpp  SteppingAction.cpp
(+22 files in other folders)
